--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="scroll-bg"></div>
     <div class="content"> 
         <div id="titulo">
-            <h1>A ti, mujer llena de brillo y felicidad, Feliz día de la Mujer</h1>
+            <h1>FELIZ CUMPLEAÑOS A MI MEJOR AMIGA 🐸</h1>
         </div>
         <div id="mensaje">
-            <h2>Hoy es un día que no se si se debe felicitar o no.. Pero quiero decirte y recordarte que eres una mujer admirable, que tiene mucha fuerza y convicción, siempre luchadora y alegra
-                alguien fácil de querer, pero difícil de merecer, tú mereces el mundo entero y más, eres alguien que a pesar de los golpes de la vida siempre supo levantarse y siempre trae alegría a quien se acerca,
-                las posibilidades de encontrar a alguien como tú es como atrapar un rayo, recuerda que dentro de ti reside una fuerza inmesurable, capaz de superar cualquier desafío que se presente en tu camino. Tu valor no se mide por las
-                veces que caes, sino por las veces que te levantas y sigues adelante con más sabiduría y determinación. Nunca subestimes el poder de creer en ti misma, esa es la chispa que puede encender el fuego de tu potencial. Sigue avanzando, aprendiendo
-                y creciendo, porque el mundo necesita lo que solo tú puedes ofrecer. No hay límites para lo que puedes lograr cuando confías en tu poder interior y trabajas duro para alcanzar tus sueños. Nunca dudes de ti y de tus capacidades, porque tu luz 
+            <h2>Hoy en tu cumpleaños vengo a recordarte que eres una mujer admirable, que tiene mucha fuerza y convicción, siempre luchadora y alegra
+                alguien fácil de querer, pero difícil de merecer, te mereces el mundo entero y más, eres alguien que a pesar de los golpes de la vida siempre supo levantarse y siempre trae alegría a quien se acerca,
+                las posibilidades de encontrar a alguien como tú son una en un millón, recuerda que dentro de ti reside una fuerza inmesurable, capaz de superar cualquier desafío que se presente en tu camino. Tu valor no se mide por las
+                veces que caes, sino por las veces que te levantas y sigues adelante con más sabiduría y determinación. Nunca subestimes el poder de creer en ti misma, pues esa es la chispa que puede encender el fuego de tu potencial. Sigue avanzando, aprendiendo
+                y creciendo, porque el mundo necesita lo que solo tú puedes ofrecer. No hay límites para lo que puedes lograr cuando confías en tu poder interior y se que siempre trabajas duro para alcanzar tus sueños. Nunca dudes de ti y de tus capacidades, porque tu luz 
                 es demasiado brillante como para que la opaques. 
             </h2>
         </div>
