--- a/girasol.html
+++ b/girasol.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>Sunflower</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="image/2023-08-24Buendia.jpg" type="image/x-icon">
